--- a/app/main.css
+++ b/app/main.css
@@ -27,20 +27,19 @@ body {
     transition: 0.6s;
 }
 
-.note .task {
+.note .value {
     display: inline-block;
 }
 
-.note .delete-note {
+.note .delete {
     float: right;
-
     padding: 0;
     background-color: #fdfdfd;
     border: none;
-
     cursor: pointer;
     visibility: hidden;
 }
-.note:hover .delete-note {
+
+.note:hover .delete {
     visibility: visible;
 }
